--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/PropertyGrid/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/PropertyGrid/Themes/Generic.xaml
@@ -313,6 +313,13 @@
             Value="0" />
   </Style>
 
+  <!-- PropertyGrid Password Editors -->
+  <Style TargetType="{x:Type editor:PropertyGridEditorWatermarkPasswordBox}"
+         BasedOn="{StaticResource {x:Type TextBox}}">
+    <Setter Property="BorderThickness"
+            Value="0" />
+  </Style>
+
   <!-- PropertyGrid ColorPicker Editors -->
   <Style TargetType="{x:Type editor:PropertyGridEditorColorPicker}"
          BasedOn="{StaticResource {x:Type local:ColorPicker}}">
